k8s/auth-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: userdb
  namespace: blogs
spec:
  serviceName: userdb-headless
  replicas: 1
  selector:
    matchLabels:
      app: userdb
  template:
    metadata:
      labels:
        app: userdb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "my-storage-class"
        resources:
          requests:
            storage: 1Gi
