k8s/blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
  namespace: blogs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog-app
          image: ivanakoceva/blog-app:latest
          ports:
            - containerPort: 8080
