k8s/blog-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blogdb
  namespace: blogs
spec:
  serviceName: blogdb-headless
  replicas: 1
  selector:
    matchLabels:
      app: blogdb
  template:
    metadata:
      labels:
        app: blogdb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
