k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blogdb
  namespace: blogs
spec:
  serviceName: "blogdb"
  replicas: 1
  selector:
    matchLabels:
      app: blogdb
  template:
    metadata:
      labels:
        app: blogdb
    spec:
      containers:
        - name: postgres
          image: postgres:13.1-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: blogdb-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: blogdb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
