k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: blogs
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
