k8s/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blogs
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
