k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blogs
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: blogdb
  namespace: blogs
spec:
  selector:
    app: blogdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
