k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blogs
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: blog.local
      http:
        paths:
          - path: /blogs
            pathType: Prefix
            backend:
              service:
                name: blog-service
                port:
                  number: 80
